Refined Sd Type creation, multithreading, added some switches