@@ -82,13 +82,11 @@
                             <mainClass>org.dbpedia.extraction.scripts.SdTypeCreation</mainClass>
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
-                                <jvmArg>-Xmx8G</jvmArg>
+                                <jvmArg>-Xmx16G</jvmArg>
+                                <jvmArg>-Xms4G</jvmArg>
                                 <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
-                                <!--
-                                <jvmArg>-XX:+PrintGC</jvmArg>
-                                <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
-                                -->
+                                <jvmArg>-XX:-UseGCOverheadLimit</jvmArg>
                             </jvmArgs>
                         </launcher>
                         <launcher>
